--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,24 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 19th, 2024</h1>
-            <h3>Week 21 Day 2 (Intro to CSS Day 1)</h3>
+            <h1>GDWD 105 - Agenda for August 20th, 2024</h1>
+            <h3>Week 21 Day 3 (Intro to CSS Day 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite color?</li>
+                        <li>What would your spirit animal be?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/painter-fox.jpg"
-                            alt="painter fox"
+                            src="images/spirit-animal-0.jpg"
+                            alt="spirit animal"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Basic CSS Drills</li>
                         <li><span class="type">Exercise</span>Color Palettes</li>
+                        <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
+                        <li><span class="type">Exercise</span>Document Flow Drills</li>
                     </ul>
                 </div>
 
@@ -34,23 +35,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>HTML Fundamentals</li>
-                            <li><span class="type">PowerPoints</span>Intro to CSS and CSS Properties</li>
+                            <li><span class="type">Exercise</span>Color Palettes (cont.)</li>
+                            <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Demo</span>CSS Colors and Text Styling</li>
+                            <li><span class="type">PowerPoint</span>CSS Selectors</li>
+                            <li><span class="type">Demo</span>Divs, Spans, and Flow</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Basic CSS Drills</li>
-                            <li><span class="type">Exercise</span>Color Palettes</li>
+                            <li><span class="type">PowerPoint</span>Document Flow</li>
+                            <li><span class="type">Exercise</span>Document Flow Drills</li>
                         </ul>
                     </div>
                 </div>
