--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 20th, 2024</h1>
-            <h3>Week 21 Day 3 (Intro to CSS Day 2)</h3>
+            <h1>GDWD 105 - Agenda for August 21st, 2024</h1>
+            <h3>Week 21 Day 4 (Intro to CSS Day 3)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What would your spirit animal be?</li>
+                        <li>Cats? or Dogs? (or both? or neither?)</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-blue-gray">
                         <img 
-                            src="images/spirit-animal-0.jpg"
-                            alt="spirit animal"
+                            src="images/cats-vs-dogs.jpeg"
+                            alt="painter fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Color Palettes</li>
-                        <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
-                        <li><span class="type">Exercise</span>Document Flow Drills</li>
+                        <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
+                        <li><span class="type">Exercise</span>Box Model - Border Drills</li>
+                        <li><span class="type">Exercise</span>Upside Down Tetris</li>
                     </ul>
                 </div>
 
@@ -35,24 +35,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Color Palettes (cont.)</li>
-                            <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
+                            <li><span class="type">Kahoot</span>CSS Rules Review</li>
+                            <li><span class="type">PowerPoint</span>The Box Model</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">PowerPoint</span>CSS Selectors</li>
-                            <li><span class="type">Demo</span>Divs, Spans, and Flow</li>
+                            <li><span class="type">Demo</span>Box Model</li>
+                            <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Document Flow</li>
-                            <li><span class="type">Exercise</span>Document Flow Drills</li>
+                            <li><span class="type">Exercise</span>Box Model - Border Drills</li>
+                            <li><span class="type">Exercise</span>Upside Down Tetris</li>
                         </ul>
                     </div>
                 </div>
