--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 22nd, 2024</h1>
-            <h3>Week 21 Day 5 (Intro to CSS Day 4)</h3>
+            <h1>GDWD 105 - Agenda for August 23rd, 2024</h1>
+            <h3>Week 22 Day 1 (Intro to CSS Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Would you prefer a staycation? or a destination vacation?</li>
+                        <li>What is your favorite ice cream flavor? Any toppings?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/island-vacation.jpg"
-                            alt="cat on an island turtle"
+                            src="images/icecream-cats.jpg"
+                            alt="lazy sundae"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Upside Down Tetris</li>
-                        <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
-                        <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
+                        <li><span class="type">Project</span>Box Framing</li>
                     </ul>
                 </div>
 
@@ -35,24 +33,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Upside Down Tetris</li>
-                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
+                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
+                            <li><span class="type">Demo</span>Absolute vs Relative Units [abbr.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Exercise</span>Box Model - Margin Drills [cont.]</li>
-                            <li><span class="type">Demo</span>Combining Selectors</li>
+                            <li><span class="type">Project</span>Box Framing</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
-                            <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
+                            <li><span class="type">Project</span>Box Framing [cont.]</li>
                         </ul>
                     </div>
                 </div>
