--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,23 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 23rd, 2024</h1>
-            <h3>Week 22 Day 1 (Intro to CSS Day 5)</h3>
+            <h1>GDWD 105 - Agenda for August 26th, 2024</h1>
+            <h3>Week 22 Day 2 (Intro to CSS LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>What is your favorite ice cream flavor? Any toppings?</li>
+                        <li>What is (or was) your favorite breakfast cereal?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/icecream-cats.jpg"
-                            alt="lazy sundae"
+                            src="images/kamehamehos.jpeg"
+                            alt="kamehamehos"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Box Framing</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -33,22 +33,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
-                            <li><span class="type">Demo</span>Absolute vs Relative Units [abbr.]</li>
+                            <li><span class="type">Lab Time</span>Assignment Feedback or Project</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Project</span>Box Framing</li>
+                            <li><span class="type">Lab Time</span>Extra Credit</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Box Framing [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
