agenda revision (self-led demo)

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -25,7 +25,7 @@
                     <ul>
                         <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
                         <li><span class="type">Exercise</span>Trek Cards</li>
-                        <li><span class="type">Exercise</span>Animagram Cards (?)</li>
+                        <li><span class="type">Exercise</span>Animagram Cards</li>
                     </ul>
                 </div>
 
@@ -36,21 +36,38 @@
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
                             <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients</li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a 
+                                    href="https://first-gdwd.github.io/cookbook/demos.html#cards-and-buttons-v2" 
+                                    target="_blank"
+                                >
+                                    Cards, Buttons, and Gradients
+                                </a>
+                            </li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients (cont.)</li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a 
+                                    href="https://first-gdwd.github.io/cookbook/demos.html#cards-and-buttons-v2" 
+                                    target="_blank"
+                                >
+                                    Cards, Buttons, and Gradients [cont.]
+                                </a>
+                            </li>
+                            <li><span class="type">Exercise</span>Trek Cards</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Trek Cards</li>
+                            <li><span class="type">Exercise</span>Trek Cards [cont.]</li>
                             <li><span class="type">Exercise</span>Animagram Cards</li>
                         </ul>
                     </div>
