--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 5th, 2024</h1>
-            <h3>Week 23 Day 4 (Content Layouts Day 1)</h3>
+            <h1>GDWD 105 - Agenda for September 6th, 2024</h1>
+            <h3>Week 23 Day 5 (Content Layouts Day 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>Who is your favorite supervillain? (if you have one)</li>
+                        <li>
+                            If you could create your own ice cream flavor,
+                            what would you put in it, and what would you name it?
+                        </li>
                     </ul>
-                    <div class="img-container more-space off-black">
-                        <img
-                            src="images/venom.jpeg"
-                            alt="venom"
+                    <div class="img-container">
+                        <img 
+                            src="images/icecream-cats.jpg"
+                            alt="ice cream"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                        <li><span class="type">Exercise</span>Trek Cards</li>
-                        <li><span class="type">Exercise</span>Animagram Cards</li>
+                        <li><span class="type">Exercise</span>Pokemon Cards</li>
                     </ul>
                 </div>
 
@@ -35,40 +36,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                            <li>
-                                <span class="type">Demo</span>
-                                <a 
-                                    href="https://first-gdwd.github.io/cookbook/demos.html#cards-and-buttons-v2" 
-                                    target="_blank"
-                                >
-                                    Cards, Buttons, and Gradients
-                                </a>
-                            </li>
+                            <li><span class="type">PowerPoint</span>Side-by-Side Content Layouts</li>
+                            <li><span class="type">Demo</span>Media & Text (and more)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li>
-                                <span class="type">Demo</span>
-                                <a 
-                                    href="https://first-gdwd.github.io/cookbook/demos.html#cards-and-buttons-v2" 
-                                    target="_blank"
-                                >
-                                    Cards, Buttons, and Gradients [cont.]
-                                </a>
-                            </li>
-                            <li><span class="type">Exercise</span>Trek Cards</li>
+                            <li><span class="type">Exercise</span>Pokemon Cards</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Trek Cards [cont.]</li>
-                            <li><span class="type">Exercise</span>Animagram Cards</li>
+                            <li><span class="type">Exercise</span>Pokemon Cards</li>
                         </ul>
                     </div>
                 </div>
