google fonts update

--- a/cookbook/appetizers/utilizing-google-fonts.html
+++ b/cookbook/appetizers/utilizing-google-fonts.html
@@ -352,11 +352,11 @@
                                 &lt;style&gt; tags, and paste that at the top 
                                 of our CSS file, 
                                 <span style="background-color: yellow;">
-                                    AND ADD A SEMI-COLON AT THE END!!!
+                                    AND MAKE SURE THERE'S A SEMI-COLON AT THE END!!!
                                 </span>
                             </p>
                             <p class="indent">
-                                You NEED to add that semi-colon at the end; 
+                                You NEED that semi-colon at the end; 
                                 otherwise, it won't work at all, and will break
                                 other parts of your CSS!
                             </p>
@@ -373,8 +373,15 @@
                             />
                             <figcaption>
                                 Selecting the correct line of code between the
-                                &lt;style&gt; tags. (Don't forget to add a 
-                                semi-colon at the end!!!)
+                                &lt;style&gt; tags.
+                            </figcaption>
+                            <img 
+                                src="images/google-fonts/google-fonts-import-location.png" 
+                                alt="Where to put the correct line of code" 
+                            />
+                            <figcaption>
+                                Where to put the @import code in your CSS. 
+                                (Don't forget to make sure there's a semi-colon at the end!)
                             </figcaption>
                         </div>
                     </div>
