--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 20th, 2024</h1>
-            <h3>Week 25 Day 5 (Navigation Layouts LAB DAY)</h3>
+            <h1>GDWD 105 - Agenda for September 23rd, 2024</h1>
+            <h3>Week 26 Day 1 (FINALS WEEK)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather have poor long-term or short-term memory?
+                            Would you rather be very smart or very strong?
                         </li>
                     </ul>
-                    <div class="img-container more-space blue-gray">
+                    <div class="img-container more-space dark-blue-gray">
                         <img 
-                            src="images/lab-fox.webp"
-                            alt="lab fox"
+                            src="images/buns-of-steel.webp"
+                            alt="buns of steel"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">N/A</span></li>
+                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
                     </ul>
                 </div>
 
@@ -35,22 +35,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Past Exercises or Project</li>
+                            <li><span class="type">Quiz</span>Navigation and Responsiveness</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Lab Time</span>Extra Credit - E-commerce Site</li>
-
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
                         </ul>
                     </div>
                 </div>
