--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 3rd, 2024</h1>
-            <h3>Week 27 Day 4 (Career Development)</h3>
+            <h1>GDWD 105 - Agenda for October 4th, 2024</h1>
+            <h3>Week 27 Day 5 (Career Development)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you had to pick one word to describe yourself,
-                            what would you pick?
+                            How do you feel about coding and web design
+                            now that the class is over?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-blue">
+                    <div class="img-container more-space final-black">
                         <img 
-                            src="images/overthinking.webp"
-                            alt="overthinking bunny"
+                            src="images/finalday.jpg"
+                            alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Creative Resume Sketches</li>
-                        <li><span class="type">Project</span>Creative Resume</li>
+                        <li><span class="type">Project</span>Freelancing I: Proposals</li>
+                        <li><span class="type">Project</span>Freelancing II: Invoices</li>
                     </ul>
                 </div>
 
@@ -37,22 +37,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Career Development Tips Refresher</li>
-                            <li><span class="type">Exercise</span>Creative Resume Sketches</li>
+                            <li><span class="type">Director Visit</span>105 End of Course Survey</li>
+                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Project</span>Creative Resume</li>
+                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing [cont.]</li>
+                            <li><span class="type">Project</span>Freelancing I: Proposals</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Creative Resume [cont.]</li>
+                            <li><span class="type">Project</span>Freelancing I: Proposals [cont.]</li>
+                            <li><span class="type">Project</span>Freelancing II: Invoices</li>
                         </ul>
                     </div>
                 </div>
