--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -1797,25 +1797,10 @@
                             <p>
                                 Scroll down to the bottom of the 
                                 right sidebar and click on 
-                                "github-pages" under "Environments".
-                            </p>
-                            <p>
-                                <strong>
-                                    NOTE: Github recently updated their UI,
-                                    and you may see "Deployments" instead of
-                                    "Environments"; if so, click "Deployments"
-                                    instead for this step.
-                                </strong>
+                                "github-pages" under "Deployments".
                             </p>
                         </div>
                         <div class="imageContainer">
-                            <img 
-                                src="images/web-dev-startup/environments.png" 
-                                alt="The Environments section in github.com" 
-                            >
-                            <figcaption>
-                                The Environments section in github.com
-                            </figcaption>
                             <img 
                                 src="images/web-dev-startup/deployments.png" 
                                 alt="The Deployments section in github.com" 
@@ -1831,42 +1816,37 @@
                         <div class="textContainer">
                             <p>
                                 From there you will find the 
-                                deployment page. Click on the 
-                                "View deployment" button, and 
-                                it will open your homepage
+                                deployment page. There are many options you can
+                                use to view the current deployment, circled
+                                in the screenshot to the right.
+                            </p>
+                            <p>
+                                <strong>
+                                    If the icon next to the top deployment is not
+                                    green, then you may have to wait longer.
+                                    <br><br>
+                                    If it is an orange spinning circle, your 
+                                    changes are still being deployed.
+                                    <br><br>
+                                    If it's red, then something went wrong in GitHub;
+                                    you can most likely fix it by committing and pushing again.
+                                </strong>
+                            </p>
+                            <p>
+                                Clicking on any of the circled options will 
+                                take you to your homepage
                                 (which still just displays 
                                 the name of your repository, 
                                 from your README.md file). 
                             </p>
-                            <p>
-                                <strong>
-                                    NOTE: Again, Github recently updated their UI,
-                                    so you may see a different view than the 
-                                    first screenshot.
-                                    <br><br>
-                                    If so, refer to the second
-                                    screenshot, and click the "pop-out"
-                                    icon at the far right of the most recent 
-                                    deployment.
-                                </strong>
-                            </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/web-dev-startup/deploymentpage2.png" 
+                                src="images/web-dev-startup/deploymentpage_new_v2.png" 
                                 alt="The Deployments page in github.com, where you can access your homepage" 
                             >
                             <figcaption>
                                 The Deployments page in github.com, 
-                                where you can access your homepage<br>via the 
-                                "View Deployment" button
-                            </figcaption>
-                            <img 
-                                src="images/web-dev-startup/deploymentpage_new.png" 
-                                alt="The (new) Deployments page in github.com, where you can access your homepage" 
-                            >
-                            <figcaption>
-                                The (new) Deployments page in github.com, 
                                 where you can access your homepage<br>via the 
                                 "popout" icon at the far right of the most 
                                 recent deployment 
