--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 18th</h1>
-            <h3>Week 19 Day 5 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for October 21st</h1>
+            <h3>Week 20 Day 1 (Intro to HTML Day 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>
-                            If you had to choose, would you pick extreme cold? or extreme heat?
-                        </li>
+                        <li>What is your go-to comfort food?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/procrastination.webp"
-                            alt="procrastination"
+                            src="images/feelingsnacky.jpg"
+                            alt="feeling snacky"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                        <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
+                        <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                     </ul>
                 </div>
 
@@ -36,22 +35,24 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                            <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
+                            <li><span class="type">PowerPoint</span>General Web Development</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Intro to HTML</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Prep</span>Quiz 1 Study Hints</li>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup (cont.)</li>
+                            <li><span class="type">PowerPoint</span>Intro to GitHub (?)</li>
                         </ul>
                     </div>
                 </div>
