web dev startup updates

--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -149,10 +149,15 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                Once your software downloads, 
+                                If you're on a Mac, once your software downloads, 
                                 unzip and drag it to your
-                                Applications folder, making it 
-                                easier to find in your launchpad.
+                                Applications folder.
+                            </p>
+                            <p class="indent">
+                                This will make it 
+                                easier to find in your Launchpad, and will also
+                                set it up properly to interact with the other
+                                application we'll be installing later.
                             </p>
                         </div>
                         <div class="imageContainer">
@@ -174,7 +179,16 @@
                             <p>
                                 Go ahead and open up Visual Studio Code 
                                 once you have it installed.
-                                It should resemble the screenshot on the right.
+                            </p>
+                            <p class="indent">
+                                If you are prompted in the installation process 
+                                to check any boxes before installing, just leave
+                                the default settings and continue with the 
+                                installation.
+                            </p>
+                            <br>
+                            <p>
+                                It should (somewhat) resemble the screenshot on the right.
                             </p>
                             <p class="indent">
                                 It may not look EXACTLY the same, and that's
@@ -182,9 +196,10 @@
                                 itself.
                             </p>
                             <p class="indent">
-                                You'll also probably see a Welcome tab when 
+                                You'll also probably see a Welcome tab and/or
+                                some personalization options when 
                                 you first open Visual Studio Code. You can 
-                                safely close that tab, or skip the 
+                                safely close that tab and skip the 
                                 Personalization options it has you select.
                             </p>
                             <p class="indent">
@@ -1542,8 +1557,14 @@
                         <div class="textContainer">
                             <p>
                                 To get started, click and 
-                                drag to select all the code from
-                                line 3 to line 11.
+                                drag to select everything between (and including)
+                                the &lt;head&gt; and &lt;/body&gt; tags, as shown
+                                in the image to the right.
+                            </p>
+                            <p class="indent bold">
+                                It's okay if the line numbers of the selected 
+                                code differ on your screen compared to the 
+                                image.
                             </p>
                             <p>
                                 After selecting the appropriate 
