--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -45,6 +45,7 @@
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
                             <li><span class="type">Demo</span>HTML Lists | Parent/Child Relationships</li>
+                            <li><span class="type">PowerPoint</span>HTML Attributes</li>
                             <li><span class="type">Demo</span>HTML Images</li>
                         </ul>
                     </div>
